--- a/.env
+++ b/.env
@@ -58,4 +58,4 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 
-OPENAI_API_KEY=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
+OPENAI_API_KEY=
